Add Interest Form + Change Style

--- a/index.html
+++ b/index.html
@@ -1,28 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Prototyp3 is Hiring</title>
   <link rel="stylesheet" href="style.css" />
   <link rel="icon" type="image/png" href="favicon-png-lg.png">
 </head>
+
 <body>
   <main class="container">
     <h1 style="color: green; font-size: 40px;"><strong>Prototyp3</strong></h1>
     <h1>🚧 This Page is Barebones — Because We’re Still Building!</h1>
     <p class="intro">
-      We’re <strong>Prototyp3</strong>, a not-for-profit on a mission to <em>democratize experiential learning in tech</em>.  
+      We’re <strong>Prototyp3</strong>, a not-for-profit on a mission to <em>democratize experiential learning in
+        tech</em>.
       No rejections. No fees. Just a door — open for anyone ready to try.
     </p>
 
-    <h2 style="color: green;">But right now… we need your help.</h2>
+    <section class="interest-form">
+      <h2 style="color: #6a1b9a; margin-top: 0rem;">Want to Stay in the Loop?</h2>
+      <p>
+        Just curious? Super hyped? Or kinda just vibing with what we’re doing?
+      </p>
+      <p>Either way drop your name in this quick form so we can keep you in the loop about what’s coming, new roles,
+        and when we go live.</p>
+      <a href="https://forms.gle/UN1j8hkUrwe68nNt6" class="apply-button" target="_blank">Fill Out Interest Form</a>
+    </section>
+
+    <h2 style="color: green;">But right now… we need your help. Calling Volunteers!</h2>
 
     <section class="roles">
       <div class="role">
         <h3>Designer</h3>
-        <p>Help us stop posting MS Paint-looking content. Build our visual identity from scratch — logo, brand kit, graphics, and all the vibes.</p>
-        <p><strong>This website... you can literally see why we need you.. Help us make it not look like this!!</strong></p>
+        <p>Help us stop posting MS Paint-looking content. Build our visual identity from scratch — logo, brand kit,
+          graphics, and all the vibes.</p>
+        <p><strong>This website... you can literally see why we need you.. Help us make it not look like this!!</strong>
+        </p>
         <a href="https://forms.gle/WwvJXqauuzWU2d4B7" class="apply-button" target="_blank">Apply Now</a>
       </div>
 
@@ -33,27 +48,30 @@
       </div>
     </section>
 
-    <h2 style="color: green;">👀 Why Join Us?</h2>
-    <ul class="perks">
-      <li>Build something real, from the ground up</li>
-      <li>Own a portfolio project that’s actually seen by thousands</li>
-      <li>Get a reference letter and a contributor spotlight</li>
-      <li>Be part of a mission that’s bigger than yourself</li>
-    </ul>
+    <section class="join">
+      <h2 style="color: green; margin-top: 0rem;">👀 Why Join Us?</h2>
+      <ul class="perks">
+        <li>Build something real, from the ground up</li>
+        <li>Own a portfolio project that’s actually seen by thousands</li>
+        <li>Get a reference letter and a contributor spotlight</li>
+        <li>Be part of a mission that’s bigger than yourself</li>
+      </ul>
 
-    <p><strong>All roles are unpaid volunteer</strong> (for now), but the impact is very real.</p>
+      <p><strong>All roles are unpaid volunteer</strong> (for now), but the impact is very real.</p>
 
-    <h2 style="color: green;">Not one of those roles but still want in?</h2>
-    <p>
-      Fill out our Open Talent Application — writers, organizers, builders, chaos lovers — we want you.
-    </p>
-    <a href="https://forms.gle/TcdtDyZUg1xNSDGF9" class="apply-button" target="_blank">Open Talent Application</a>
+      <h2 style="color: green;">Not one of those roles but still want in?</h2>
+      <p>
+        Fill out our Open Talent Application — writers, organizers, builders, chaos lovers — we want you.
+      </p>
+      <a href="https://forms.gle/TcdtDyZUg1xNSDGF9" class="apply-button" target="_blank">Open Talent Application</a>
+    </section>
 
 
     <h2>📩 Get in Touch</h2>
     <ul class="contact">
       <li>Email: <a href="mailto:prototyp3.org@gmail.com">prototyp3.org@gmail.com</a></li>
       <li>LinkedIn: <a href="https://www.linkedin.com/company/prototyp3-org">linkedin.com/company/prototyp3-org</a></li>
+      <li>Interest Form: <a href="https://forms.gle/UN1j8hkUrwe68nNt6">here!</a></li>
     </ul>
 
     <footer>
@@ -62,4 +80,5 @@
     </footer>
   </main>
 </body>
+
 </html>
