Update partner page with collaboration details
Replaced placeholder text with detailed information for institutions and companies about how to collaborate, including project guidelines, benefits, and sponsorship opportunities. Clarifies the process and value of partnering during the pilot cohort.

--- a/partner.html
+++ b/partner.html
@@ -43,38 +43,35 @@
             <div class="container">
                 <div class="section-header">
                     <h2>For Institutions & Companies</h2>
-                    <br><p> </p>
-                    <p>Coming Soon...</p>
+                    <p>Let's collaborate to create impactful solutions.</p>
                 </div>
-
-                <!-- <div class="hero-cta fade-in delay-3">
-                    <a href="mailto:prototyp3.org@gmail.com" class="btn">Email Us</a>
-                </div> -->
             </div>
-        </section>
 
-        <section class="section page-section">
-            <!-- <div class="container">
+            <div class="container">
                 <div class="section-bg">
-                    <h2>Sponsorship Opportunities</h2>
-                    <p>Support the movement. Empower the future.</p>
-                    <p>Help us run our student cohorts, build our platform, and make this experience accessible for all
-                        without putting the cost on students.</p>
-                    <ul class="matrix-list mb-4">
-                        <li>Student showcase events</li>
-                        <li>Platform & tool access</li>
-                        <li>Prizes & incentives</li>
-                        <li>Honorariums for Volunteers</li>
-                    </ul>
-                    <p>We offer flexible sponsorship packages and love building meaningful, long-term relationships with
-                        our
-                        partners.</p>
+                    <p>Organizations (whether companies, nonprofits, or startups) can support our mission by
+                        contributing real, low-risk tech projects for students to work on during our 12-week cohort.
+                    </p>
+                    <p>Projects should be practical, non-critical to core operations, and ideally something you'd love
+                        to automate or improve but haven’t had bandwidth to tackle. </p>
+                    <p>You can optionally provide a tech
+                        lead to guide the student team, or let us run the project independently through our internal
+                        mentorship and management structure. Projects can be assigned to one team or opened up to
+                        multiple teams as a challenge with varied solutions.</p>
+                    <p>---</p>
+                    <p>In return, you gain early access to a pool of motivated, emerging talent while receiving working
+                        prototypes or early builds tailored to your problem statement.You’ll also increase visibility
+                        as a community-focused innovator and potential future partner. </p>
+                    <p>This is a zero-cost, zero-risk
+                        opportunity during our pilot (Fall 2025) run, no funding required. If the collaboration proves
+                        valuable,
+                        we’re open to formalizing longer-term partnerships in future cohorts.</p>
                     <p>Interested in sponsoring Prototyp3 or our upcoming showcase?</p>
                     <div class="hero-cta fade-in delay-3">
                         <a href="mailto:prototyp3.org@gmail.com" class="btn">Let's Talk</a>
                     </div>
                 </div>
-            </div> -->
+            </div>
         </section>
 
         <!-- Footer -->
